--- a/FVE/src/main/resources/front/styles/add-order.css
+++ b/FVE/src/main/resources/front/styles/add-order.css
@@ -305,7 +305,7 @@
 }
 #add_order .divCart .btnSubmitActive {
   color: #333333;
-  background: #ffc200;
+  background: #adc8a2;
 }
 
 #add_order .divCart .divGoodsNum {
