--- a/FVE/src/main/resources/front/styles/login.css
+++ b/FVE/src/main/resources/front/styles/login.css
@@ -45,7 +45,7 @@
   font-family: PingFangSC, PingFangSC-Regular;
   font-weight: 400;
   text-align: left;
-  color: #ffc200;
+  color: #adc8a2;
   letter-spacing: 0px;
 }
 
@@ -86,7 +86,7 @@
 }
 
 #login .btnPhone {
-  background: #ffc200;
+  background: #adc8a2;
   color: #333333;
 }
 
