--- a/FVE/src/main/resources/front/styles/user.css
+++ b/FVE/src/main/resources/front/styles/user.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 164rem;
   opacity: 1;
-  background: #ffc200;
+  background: #adc8a2;
   box-sizing: border-box;
   padding-left: 12rem;
   padding-right: 12rem;
